# qbiz-api

./: .gitignore  Cargo.toml
examples/: common_bank_list.rs  fund_transfer_check_and_save_payment_bill_detail.rs  fund_transfer_confirm_and_transfer.rs  fund_transfer_create_payment_bill.rs
examples/data/: common_bank_list.json  fund_transfer_success_callback.json  fund_transfer_success_callback2.json
src/: custom_serde.rs  fmt.rs  lib.rs  response_codes.rs  shared.rs
src/common/: bank_list.rs  mod.rs
src/fund_transfer/: check_and_save_payment_bill_detail.rs  confirm_and_transfer.rs  create_payment_bill.rs  mod.rs  payment_bill_transfer_callback.rs
