[package]
name = "qbiz-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_with = {version = "3.3.0", features = ["macros"] }
thiserror = "1.0.48"
reqwest = "0.11.20"
tokio = {version = "1.32.0", features = ["full"]}
md5= "0.7.0"
ulid="1.1.0"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
serde_repr = "0.1.16"
serde-enum-str = "0.4.0"